[gd_scene load_steps=16 format=2]

[ext_resource path="res://Catching.gd" type="Script" id=1]
[ext_resource path="res://Scene.tscn" type="PackedScene" id=2]
[ext_resource path="res://objects/alikorn.gltf" type="PackedScene" id=3]
[ext_resource path="res://dale.tscn" type="PackedScene" id=4]
[ext_resource path="res://objects/heart.gltf" type="PackedScene" id=5]
[ext_resource path="res://objects/popcorn.gltf" type="PackedScene" id=6]
[ext_resource path="res://chip.tscn" type="PackedScene" id=7]
[ext_resource path="res://objects/star.gltf" type="PackedScene" id=8]
[ext_resource path="res://fonts/Alphakind.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://audio/ThemeSong.ogg" type="AudioStream" id=10]
[ext_resource path="res://audio/alicorn.ogg" type="AudioStream" id=11]
[ext_resource path="res://audio/popcorn.ogg" type="AudioStream" id=12]
[ext_resource path="res://audio/star.ogg" type="AudioStream" id=13]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 4
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=2]
size = 60
outline_size = 7
outline_color = Color( 0.984314, 0.968627, 0.0666667, 1 )
font_data = ExtResource( 9 )

[node name="Game" type="Spatial"]
script = ExtResource( 1 )

[node name="ViewportContainerL" type="ViewportContainer" parent="."]
margin_left = -1.0
margin_top = 4.0
margin_right = 399.0
margin_bottom = 504.0
stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewportL" type="Viewport" parent="ViewportContainerL"]
size = Vector2( 400, 500 )
handle_input_locally = false
render_target_update_mode = 3

[node name="CameraL" type="Camera" parent="ViewportContainerL/ViewportL"]
transform = Transform( 1, 0, 0, 0, 0.766044, 0.642788, 0, -0.642788, 0.766044, 0, 8, 10 )

[node name="ViewportContainerR" type="ViewportContainer" parent="."]
margin_left = 401.191
margin_top = 1.75903
margin_right = 801.191
margin_bottom = 501.759
stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewportR" type="Viewport" parent="ViewportContainerR"]
size = Vector2( 400, 500 )
handle_input_locally = false
render_target_update_mode = 3

[node name="CameraR" type="Camera" parent="ViewportContainerR/ViewportR"]
transform = Transform( 1, 0, 0, 0, 0.766044, 0.642788, 0, -0.642788, 0.766044, 0, 8, 10 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, 4, 0 )
light_energy = 0.34
light_indirect_energy = 0.0
shadow_enabled = true

[node name="CHIP" parent="." instance=ExtResource( 7 )]

[node name="DALE" parent="." instance=ExtResource( 4 )]

[node name="Scene" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0321016, 0 )

[node name="FALLINGS" type="Spatial" parent="."]

[node name="Templates" type="Spatial" parent="."]

[node name="alicorn" parent="Templates" instance=ExtResource( 3 )]
transform = Transform( 0.353553, -0.353553, 0, 0.353553, 0.353553, 0, 0, 0, 0.5, 0, 1, 0 )

[node name="heart" parent="Templates" instance=ExtResource( 5 )]
transform = Transform( -4.2328e-08, -2.44381e-08, 0.3, -0.15, 0.259808, 0, -0.259808, -0.15, -4.88762e-08, 0, 1, 0 )

[node name="popcorn" parent="Templates" instance=ExtResource( 6 )]
transform = Transform( 0.4, 0, 0, 0, 0.2, -0.34641, 0, 0.34641, 0.2, 0, 1, 0 )

[node name="star" parent="Templates" instance=ExtResource( 8 )]
transform = Transform( 0.4, 0, 0, 0, 0.34641, 0.2, 0, -0.2, 0.34641, 0, 1, 0 )

[node name="countCHIP" type="Button" parent="."]
margin_right = 200.0
margin_bottom = 84.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "CHIP: 0"
flat = true
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="countDALE" type="Button" parent="."]
margin_left = 1.0
margin_top = 69.0
margin_right = 201.0
margin_bottom = 153.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "DALE: 0"
flat = true
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="messageText" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -37.5
margin_right = 300.0
margin_bottom = 37.5
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Message Text"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="audioBackground" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
autoplay = true

[node name="audioAlicorn" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[node name="audioPopcorn" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )

[node name="audioStar" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )

[node name="audioHeart" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
